# BTL_Cplusplus_NHOM4HN_TEAM2

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.ps1  build.sh  de-bai.txt  debug_transaction.cpp  test_atomic_transfer.cpp  test_transaction.cpp  wallet_system
data/: wallet_system.db  wallet_system.db-shm  wallet_system.db-wal
data/backup/: backup_20250604_205029.db  backup_20250607_155339.db  backup_20250609_205959.db  backup_history.txt
src/: main.cpp  thread_compat.h
src/models/: User.cpp  User.h  Wallet.cpp  Wallet.h  Wallet_new.h  Wallet_old.h
src/security/: OTPManager.cpp  OTPManager.h  SecurityUtils.cpp  SecurityUtils.h
src/storage/: DataManager.cpp  DataManager.h  DatabaseManager.cpp  DatabaseManager.h  OTPStorage.cpp  OTPStorage.h
src/system/: AuthSystem.cpp  AuthSystem.h  WalletManager.cpp  WalletManager.h
src/ui/: UserInterface.cpp  UserInterface.h  UserValidator.cpp  UserValidator.h
